@@ -492,7 +492,9 @@ namespace LinuxSampler { namespace gig {
      *                         this audio fragment cycle
      */
     void Engine::RenderActiveVoices(EngineChannel* pEngineChannel, uint Samples) {
+        #if !CONFIG_PROCESS_MUTED_CHANNELS
         if (pEngineChannel->GetMute()) return; // skip if sampler channel is muted
+        #endif
 
         RTList<uint>::Iterator iuiKey = pEngineChannel->pActiveKeys->first();
         RTList<uint>::Iterator end    = pEngineChannel->pActiveKeys->end();
@@ -622,7 +624,9 @@ namespace LinuxSampler { namespace gig {
      *  @param itNoteOnEvent - key, velocity and time stamp of the event
      */
     void Engine::ProcessNoteOn(EngineChannel* pEngineChannel, Pool<Event>::Iterator& itNoteOnEvent) {
-       if (pEngineChannel->GetMute()) return; // skip if sampler channel is muted
+        #if !CONFIG_PROCESS_MUTED_CHANNELS
+        if (pEngineChannel->GetMute()) return; // skip if sampler channel is muted
+        #endif
 
         const int key = itNoteOnEvent->Param.Note.Key;
 
@@ -682,7 +686,9 @@ namespace LinuxSampler { namespace gig {
      *  @param itNoteOffEvent - key, velocity and time stamp of the event
      */
     void Engine::ProcessNoteOff(EngineChannel* pEngineChannel, Pool<Event>::Iterator& itNoteOffEvent) {
+        #if !CONFIG_PROCESS_MUTED_CHANNELS
         if (pEngineChannel->GetMute()) return; // skip if sampler channel is muted
+        #endif
 
         midi_key_info_t* pKey = &pEngineChannel->pMIDIKeyInfo[itNoteOffEvent->Param.Note.Key];
         pKey->KeyPressed = false; // the MIDI key was now released
@@ -1185,7 +1191,9 @@ namespace LinuxSampler { namespace gig {
                     dmsg(4,("PEDAL DOWN\n"));
                     pEngineChannel->SustainPedal = true;
 
+                    #if !CONFIG_PROCESS_MUTED_CHANNELS
                     if (pEngineChannel->GetMute()) return; // skip if sampler channel is muted
+                    #endif
 
                     // cancel release process of voices if necessary
                     RTList<uint>::Iterator iuiKey = pEngineChannel->pActiveKeys->first();
@@ -1205,7 +1213,9 @@ namespace LinuxSampler { namespace gig {
                     dmsg(4,("PEDAL UP\n"));
                     pEngineChannel->SustainPedal = false;
 
+                    #if !CONFIG_PROCESS_MUTED_CHANNELS
                     if (pEngineChannel->GetMute()) return; // skip if sampler channel is muted
+                    #endif
 
                     // release voices if their respective key is not pressed
                     RTList<uint>::Iterator iuiKey = pEngineChannel->pActiveKeys->first();
@@ -1431,7 +1441,7 @@ namespace LinuxSampler { namespace gig {
     }
 
     String Engine::Version() {
-        String s = "$Revision: 1.50 $";
+        String s = "$Revision: 1.51 $";
         return s.substr(11, s.size() - 13); // cut dollar signs, spaces and CVS macro keyword
     }
 
